# flexpart-gpu

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  NOTICE.md  README.md  docker-compose.yml
benches/: advection.rs
docker/: Dockerfile.fortran  Dockerfile.gpu  docker-compose.nvidia.yml  docker-compose.yml
docs/: README.md  architecture.md  benchmarks.md  development.md  quickstart.md  scientific-changelog.md  validation-report.md
docs/benchmarks/: benchmark-1m-fortran-vs-gpu0.md  benchmark-fortran-vs-gpu-10m-production-20260307.md  benchmark-fortran-vs-gpu-current.md  benchmark-performance-scaling.md  benchmark-scientific-validation.md
docs/science/: README.md  advection.md  concentration-gridding.md  coordinate-system.md  deposition.md  known-limitations.md  lagrangian-particle-dispersion.md  simulation-flow.md  turbulent-diffusion.md
docs/temp/: .gitignore
scripts/: compare-fortran.sh  compare_clean_partposit.py  compare_concentrations.py  generate_synthetic_grib.py  gpu-preflight.sh  run-etex.sh  validate-etex.sh
scripts/etex/: compare_etex_fortran_obs.py  compare_gpu_obs.py  compare_with_observations.py  download_era5.py  download_era5_gcs.py  download_era5_west.py  parse_measurements.py  prepare_flexpart_input.py  prepare_flexpart_input_from_npy.py  prepare_gpu_meteo.py
src/: lib.rs  main.rs
src/config/: mod.rs
src/coords/: mod.rs
src/gpu/: advection.rs  buffers.rs  cbl.rs  compaction.rs  convection.rs  deposition.rs  (+13 more)
tests/: backward_timeloop.rs  convection_chain.rs  cpu_gpu_comparison.rs  forward_timeloop.rs  integration.rs  validation_etex.rs
(+63 files in other folders)
